bool-internship-project-frontend/src/styles.css
/* You can add global styles to this file, and also import other style files */
.container {
    max-width: 1000px;
    margin: auto;
    background: #eeeeee;
    padding: 20px;
    border-radius: 15px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}
h3, h2 {
    font-weight: 800;
}
.container1 {
    max-width: 1000px;
    margin: auto;
    background: #ffffff;
    padding: 20px;
    border-radius: 15px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

.search-bar {
    display: flex;
    justify-content: space-between;
    margin-bottom: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.search-bar input {
    width: 75%;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
}

.search-bar button {
    padding: 10px 20px;
    background-color: #007bff;
    color: white;
    transition: all 0.3s ease;
    font-weight: bold;
    border: none;
    gap:10px;
    border-radius: 5px;
    cursor: pointer;
}

.search-bar button:hover {
    background-color: #a7a7a7;
    color: #000000;
    transform: scale(1.05);
}

.search-bar-user {
    display: flex;
    justify-content: space-between;
    margin-bottom: 20px;
    gap: 10px;
}

.search-bar-user input {
    width: 220px;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
}

.search-bar-user button {
    padding: 10px 20px;
    background-color: #007bff;
    color: white;
    font-weight: bold;
    transition: all 0.3s ease;
    border: none;
    width: auto;
    border-radius: 5px;
    cursor: pointer;
}

.search-bar-user button:hover {
    background-color: #a7a7a7;
    color: #000000;
    transform: scale(1.05);
}

#userRoles {
    width: 220px;
    padding: 10px;
    color: #000000;
    border: 1px solid #ccc;
    border-radius: 5px;
}

table {
    width: 100%;
    border-collapse: collapse;
}

table th,
table td {
    padding: 10px;
    border: 1px solid #ccc;
    text-align: center;
}

table th {
    background-color: #f1f1f1;
    font-size: larger;
    font-weight: 900;
}

table tbody td a{
    /* background-color: #a2a2a2;
    width: 10vh;
    width: 200px;
    margin: 10px 0;
    border-radius: 8px;
    font-size: 18px;  */
    font-weight: 900;
}

/* Page Number */
.container div.clearfix {
    padding-top: 10px;
    font-weight: 700;
    font-size:small;
}

.pagination {
    float: right;
    margin: 0 0 5px;
}

.pagination li a {
    border: none;
    font-size: 13px;
    min-width: 30px;
    min-height: 30px;
    color: #000000;
    margin: 0 2px;
    line-height: 30px;
    border-radius: 10px !important;
    text-align: center;
    padding: 0 6px;
}

.pagination li a:hover {
    color: #ffffff;
    background: #a7a7a7;
    color: #000000;
    
}

.pagination li.active a,
.pagination li.active a.page-link {
    background: #007bff;
}

.pagination li.active a:hover {
    background: #a7a7a7;
    color: white;
    
}

.pagination li.disabled i {
    color: #ccc;
}

.pagination li i {
    font-size: 16px;
    padding-top: 6px
}

.hint-text {
    float: left;
    margin-top: 10px;
    font-size: 13px;
}

/* Modal styling */
.modal {
    display: none;
    position: fixed;
    z-index: 1;
    padding-top: 60px;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.5);
}

.modal-content {
    background-color: #ffffff;
    margin: auto;
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
    max-width: fit-content;
    border-radius: 15px;
    font-size: large;
}

.popup-close {
    color: #ffffff;
    float: left;
    font-size: 18px;
    font-weight: bold;
    padding-top: 15px;
}

.modal input {
    width: 350px;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
}

.modal-content button {
    display: flex;
    padding: 10px;
    background-color: #007bff;
    color: white;
    font-weight: bold;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    align-items: end;
    padding: 10px 20px;
    transition: all 0.3s ease;
}

.modal-content button:hover {
    background-color: #a7a7a7;
    color: #000000;
    transform: scale(1.05);
}

.modal-content #userRoles {
    width: 350px;
    padding: 10px;
    color: #000000;
    border: 1px solid #ccc;
    border-radius: 5px;
}


.modal-content .button-container span {
    display: flex;
    padding-top: 20px;
    justify-content: center;
    gap: 20px;
}

/* .modal-content .box {
    width: 350px;
    border-top: 2px solid #000000;
    padding-bottom: 5px;
} */

.modal-content p{
    align-items: center;
    margin: 8px 0;
}

